css/style.css
/* ... */
.mil-menu-list li {
  list-style-type: none;
  margin-bottom: 15px;
}
.mil-menu-list li:last-child {
  margin-bottom: 0;
}
.mil-menu-list li a {
  display: block;
  -webkit-transition: 0.2s cubic-bezier(0, 0, 0.3642, 1);
  transition: 0.2s cubic-bezier(0, 0, 0.3642, 1);
}
.mil-menu-list li a:hover {
  -webkit-transform: translateX(5px);
          transform: translateX(5px);
  color: rgb(255, 255, 255);
}
.mil-menu-list.mil-hori-list {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
}
.mil-menu-list.mil-hori-list li {
  margin-bottom: 0;
  margin-right: 30px;
}
.mil-menu-list.mil-dark li a {
  color: rgb(43, 135, 189);
}

.mil-main-menu {
  height: 100vh;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
}
.mil-main-menu ul {
  padding: 0;
  margin: 0;
}
.mil-main-menu ul li {
  margin-bottom: 40px;
}
.mil-main-menu ul li:last-child {
  margin-bottom: 0;
}
.mil-main-menu ul li a {
  position: relative;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  font-weight: 500;
  color: rgba(255, 255, 255, 0.8);
  font-size: 34px;
  -webkit-transition: 0.4s cubic-bezier(0, 0, 0.3642, 1);
  transition: 0.4s cubic-bezier(0, 0, 0.3642, 1);
}
@media screen and (max-width: 992px) {
  .mil-main-menu ul li a {
    font-size: 26px;
  }
}
.mil-main-menu ul li a:before {
  content: "";
  position: absolute;
  left: 0;
  width: 10px;
  height: 10px;
  border-radius: 50%;
  background-color: rgba(255, 255, 255, 0.4);
  -webkit-transform: scale(0);
          transform: scale(0);
  -webkit-transition: 0.4s cubic-bezier(0, 0, 0.3642, 1);
  transition: 0.4s cubic-bezier(0, 0, 0.3642, 1);
}
.mil-main-menu ul li a:hover {
  color: rgb(255, 255, 255);
}
.mil-main-menu ul li a.mil-active {
  padding-left: 25px;
}
.mil-main-menu ul li a.mil-active:before {
  -webkit-transform: scale(1);
          transform: scale(1);
  background-color: rgb(45, 45, 77);
}
.mil-main-menu ul li.mil-active > a {
  color: rgb(45, 45, 77);
}
.mil-main-menu ul li.mil-active > a:hover {
  color: rgb(45, 45, 77) !important;
  -webkit-filter: brightness(110%);
          filter: brightness(110%);
}
.mil-main-menu ul li.mil-has-children > a:hover {
  color: rgb(255, 255, 255);
  padding-left: 25px;
}
.mil-main-menu ul li.mil-has-children > a:hover:before {
  -webkit-transform: scale(1);
          transform: scale(1);
}
.mil-main-menu ul li.mil-has-children ul {
  padding-left: 25px;
  overflow: hidden;
  max-height: 0;
  -webkit-transition: 0.6s cubic-bezier(0, 0, 0.3642, 1);
  transition: 0.6s cubic-bezier(0, 0, 0.3642, 1);
}
.mil-main-menu ul li.mil-has-children ul li {
  margin-bottom: 5px;
}
.mil-main-menu ul li.mil-has-children ul li:first-child {
  margin-top: 40px;
}
.mil-main-menu ul li.mil-has-children ul li a {
  display: block;
  font-size: 12px;
  color: rgba(255, 255, 255, 0.4);
  letter-spacing: 2px;
  font-weight: 500;
  text-transform: uppercase;
}
.mil-main-menu ul li.mil-has-children ul li a:before {
  display: none;
}
.mil-main-menu ul li.mil-has-children ul li a:hover {
  color: rgba(255, 255, 255, 0.8);
  -webkit-transform: translateX(5px);
          transform: translateX(5px);
}
.mil-main-menu ul li.mil-has-children ul.mil-active {
  max-height: 200px;
}
@media screen and (max-width: 1200px) {
  .mil-main-menu {
    -webkit-box-pack: center;
        -ms-flex-pack: center;
            justify-content: center;
  }
  .mil-main-menu ul {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
        -ms-flex-direction: column;
            flex-direction: column;
    -webkit-box-align: center;
        -ms-flex-align: center;
            align-items: center;
  }
  .mil-main-menu ul li {
    margin-bottom: 30px;
  }
  .mil-main-menu ul li a {
    -webkit-box-pack: center;
        -ms-flex-pack: center;
            justify-content: center;
  }
  .mil-main-menu ul li a:before {
    display: none;
  }
  .mil-main-menu ul li a.mil-active {
    padding-left: 0 !important;
  }
  .mil-main-menu ul li.mil-has-children ul {
    padding-left: 0;
  }
  .mil-main-menu ul li.mil-has-children ul li:first-child {
    margin-top: 30px;
  }
}

/* -------------------------------------------

banner

------------------------------------------- */
.mil-banner {
  height: 100vh;
}
.mil-banner .mil-hero-video {
  position: absolute;
  inset: 0;
  width: 100%;
  height: 100%;
  object-fit: cover;
  z-index: 1;
  pointer-events: none;
  opacity: 1;
}
.mil-banner .mil-animation-frame {
  display: none;
}
.mil-banner.mil-dark-bg:before {
  -webkit-backdrop-filter: none;
          backdrop-filter: none;
  background: rgba(0, 0, 0, 0.2);
}
.mil-banner .mil-gradient {
  display: none;
}
.mil-banner .container {
  height: 100%;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: end;
      -ms-flex-align: end;
          align-items: flex-end;
}
.mil-banner .mil-banner-content {
  width: 100%;
  padding-bottom: 120px;
  position: relative;
}
@media screen and (max-width: 992px) {
  .mil-banner .mil-banner-content {
    padding-bottom: 90px;
  }
}
.mil-banner .mil-lines-place {
  position: absolute;
  left: 0;
  bottom: calc(100% + 120px);
}

.mil-inner-banner .mil-banner-content {
  padding: 180px 0 170px 0;
}
@media screen and (max-width: 1200px) {
  .mil-inner-banner .mil-banner-content {
    padding: 160px 0 140px 0;
  }
}
@media screen and (max-width: 992px) {
  .mil-inner-banner .mil-banner-content {
    padding: 120px 0 130px 0;
  }
}
.mil-inner-banner {
  min-height: 72vh;
}
/* Inner banners are content-height sections, not full-viewport hero wrappers */
.mil-inner-banner .mi-invert-fix {
  height: auto;
  min-height: inherit;
}
/* ... */

